[package]
name = "katas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["sqlx-sqlite", "runtime-tokio", "sqlite"] }
tokio = { version = "1.35.1", features = ["full"] }

[lib]
name = "lib_katas"
path = "src/lib.rs"

[[bin]]
name = "katas"
path = "src/main.rs"

[profile.dev.package.sqlx-macros]
opt-level = 3
